--- a/RickAndMorty/RickAndMorty/Storyboard/Base.lproj/Main.storyboard
+++ b/RickAndMorty/RickAndMorty/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LXd-ll-pvO">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -8,25 +8,25 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Character List View Controller-->
         <scene sceneID="wGp-A5-jze">
             <objects>
-                <viewController id="ZIJ-Of-lzj" sceneMemberID="viewController">
+                <viewController id="ZIJ-Of-lzj" customClass="CharacterListViewController" customModule="RickAndMorty" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cSC-GQ-OzU">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="RickAndMorty" translatesAutoresizingMaskIntoConstraints="NO" id="nbc-la-9V9">
-                                <rect key="frame" x="5" y="67" width="383" height="200"/>
+                                <rect key="frame" x="5" y="111" width="383" height="200"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="200" id="h3H-DR-sfX"/>
                                 </constraints>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="l13-qz-wOM">
-                                <rect key="frame" x="0.0" y="272" width="393" height="546"/>
+                                <rect key="frame" x="0.0" y="316" width="393" height="502"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="ZrY-lD-0hQ">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="characterCell" id="ZrY-lD-0hQ" customClass="CharacterTableViewCell" customModule="RickAndMorty" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="393" height="150.33332824707031"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ZrY-lD-0hQ" id="bEA-1a-oYU">
@@ -57,6 +57,10 @@
                                                 <constraint firstItem="D1t-sF-sIJ" firstAttribute="leading" secondItem="8jv-wa-ftj" secondAttribute="trailing" constant="8" symbolic="YES" id="xQ9-IN-cxd"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="characterImageView" destination="8jv-wa-ftj" id="NtU-iI-8a8"/>
+                                            <outlet property="characterNameLabel" destination="D1t-sF-sIJ" id="kpe-u3-1Nq"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
@@ -73,8 +77,30 @@
                             <constraint firstItem="5Ae-T4-Fdj" firstAttribute="trailing" secondItem="nbc-la-9V9" secondAttribute="trailing" constant="5" id="jWq-oh-irL"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="NhG-sk-dOk"/>
+                    <connections>
+                        <outlet property="characterListTableView" destination="l13-qz-wOM" id="nwW-Km-6jX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bJU-Y9-v3g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976.33587786259534" y="-36.619718309859159"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="zUE-Pv-UnI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="LXd-ll-pvO" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="r8a-6B-y60">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="ZIJ-Of-lzj" kind="relationship" relationship="rootViewController" id="evl-Tz-Ld3"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bQo-Uj-Amh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="49.618320610687022" y="-36.619718309859159"/>
         </scene>
