--- a/RickAndMorty/RickAndMorty/Storyboard/Base.lproj/Main.storyboard
+++ b/RickAndMorty/RickAndMorty/Storyboard/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8jv-wa-ftj">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="8jv-wa-ftj" customClass="ServiceRequestingImageView" customModule="RickAndMorty" customModuleProvider="target">
                                                     <rect key="frame" x="0.0" y="0.0" width="150.33333333333334" height="150.33333333333334"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="150" id="Trp-BM-N3t"/>
